feat: add caching